(hopefully) fix sidebar button on narrow viewports

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,7 @@ li > p {
     display: none;
     padding: 1.5em calc(1.5em - 8px) 1.5em 1.5em; /* The dimensions are similar to the original. */
     position: fixed;
-    right: 16px;
+    right: calc((100% - 100vw) + 16px);
     transform: translateY(8px);
     z-index: 99;
   }
@@ -109,7 +109,7 @@ li > p {
     display: block;
     height: 1em;
     position: fixed;
-    right: 16px;
+    right: calc((100% - 100vw) + 16px);
     top: 16px;
     width: 1em;
     z-index: 99;
